[project]
name = "langchain_academy_course"
version = "0.1.0"
description = "Transformation of EAG S9 as per new MCP python module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.5.1",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.18",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.7",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.2.12",
    "langgraph-prebuilt>=0.2.2",
    "langgraph-sdk>=0.1.70",
    "langsmith>=0.3.44",
    "loguru>=0.7.3",
    "markitdown[docx,pdf,pptx]>=0.1.1",
    "ollama>=0.4.8",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "pymupdf4llm>=0.0.24",
    "pyyaml>=6.0.2",
    "tavily-python>=0.7.4",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_academy_course"]

[tool.uv]
pip = { index-url = "https://pypi.org/simple" }
